Prevent overflow of input and textarea on mobile

--- a/css/default-light.css
+++ b/css/default-light.css
@@ -2420,3 +2420,6 @@ button[disabled="disabled"], button[disabled=""], input[disabled="disabled"], in
   opacity:0.5;
   pointer-events:none;
 }
+input, textarea{
+  max-width:100%;
+}
